--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新智召农产品智能查询系统</title>
+    <title>新智朝阳农产品智能查询系统</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Microsoft YaHei', 'Arial', sans-serif; }
         body { background: linear-gradient(135deg, #f5f7fa 0%, #e4edf5 100%); min-height: 100vh; color: #333; line-height: 1.6; }
@@ -114,9 +114,9 @@
 </head>
 <body>
     <div class="header">
-        <div class="company-name" data-lang-zh="新智召现代智能物流科技有限公司" data-lang-en="Xinzhizhao Modern Intelligent Logistics Technology Co., Ltd.">
-            新智召现代智能物流科技有限公司
-            <div class="english">Xinzhizhao Modern Intelligent Logistics Technology Co., Ltd.</div>
+        <div class="company-name" data-lang-zh="新智朝阳现代智能物流科技有限公司" data-lang-en="xinzhizhaoyang Modern Intelligent Logistics Technology Co., Ltd.">
+            新智朝阳现代智能物流科技有限公司
+            <div class="english">xinzhizhaoyang Modern Intelligent Logistics Technology Co., Ltd.</div>
         </div>
         <div class="search-container">
             <div class="search-icon" aria-label="搜索图标">🔍</div>
@@ -302,7 +302,7 @@
     <footer class="app-footer" role="contentinfo" aria-label="页脚">
         <div class="container">
             <div class="section">
-                <h3 data-lang-zh="新智召现代智能物流科技有限公司" data-lang-en="Xinzhizhao Modern Intelligent Logistics Technology Co., Ltd.">新智召现代智能物流科技有限公司</h3>
+                <h3 data-lang-zh="新智朝阳现代智能物流科技有限公司" data-lang-en="xinzhizhaoyang Modern Intelligent Logistics Technology Co., Ltd.">新智朝阳现代智能物流科技有限公司</h3>
                 <p data-lang-zh="从农场到餐桌的精准可靠农业货物追踪。" data-lang-en="Tracking agricultural shipments from farm to table with precision and reliability.">从农场到餐桌的精准可靠农业货物追踪。</p>
                 <h3 data-lang-zh="快速链接" data-lang-en="Quick Links">快速链接</h3>
                 <div class="contact-info">
@@ -367,7 +367,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyright" data-lang-zh="© 新智召现代智能物流科技有限公司。保留所有权利。" data-lang-en="© Xinzhizhao Modern Intelligent Logistics Technology Co., Ltd.. All rights reserved.">© <span id='current-year'></span> 新智召现代智能物流科技有限公司。保留所有权利。</div>
+        <div class="copyright" data-lang-zh="© 新智朝阳现代智能物流科技有限公司。保留所有权利。" data-lang-en="© xinzhizhaoyang Modern Intelligent Logistics Technology Co., Ltd.. All rights reserved.">© <span id='current-year'></span> 新智朝阳现代智能物流科技有限公司。保留所有权利。</div>
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
